# cppcheck-cmake-example

./: .gitignore  CMakeLists.txt  main.cpp
cmake/: clang-format.cmake  cpd.cmake  cppcheck.cmake  cpplint.cmake  infer.cmake  memcheck.cmake
src/: Game.cpp  Game.hpp  GameRunner.cpp
